# degen-markets-solana

./: Anchor.toml  README.md  jest.config.js  package.json
.github/workflows/: test.yml  test2.yml
.husky/: pre-commit
docs/: entities.drawio
programs/degen-pools/: Cargo.toml
programs/degen-pools/src/: constants.rs  entries.rs  error.rs  errors.rs  events.rs  instructions.rs  lib.rs  pool_options.rs  pools.rs  state.rs  transfers.rs
tests/: claimWin.test.ts  closeEntryAccount.test.ts  createOption.test.ts  createPool.test.ts  enterPool.test.ts  executeTransaction.test.ts  executeTransfer.test.ts  fundPool.test.ts  poolPaused.test.ts
tests/utils/: constants.ts  cryptography.ts  entries.ts  events.ts  keypairs.ts  options.ts  pools.ts  programAccountDerivation.ts  transfers.ts
